Bug 228802 - Copy paste doesn't work
Summary: Copy paste doesn't work
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-MainView (other bugs)
Version First Reported In: 1.2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-27 20:21 UTC by Bartek Pietrasiak
Modified: 2012-06-27 10:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bartek Pietrasiak 2010-02-27 20:21:06 UTC
Version:           1.2.0 (rev.: 1096684) (using 4.3.4 (KDE 4.3.4), 4.3.4-3.fc11 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.30.10-105.fc11.i686.PAE

Copy/paste images from one album to another doesn't work. Neither via shortcut, nor via context menu.
Comment 1 Marcel Wiesweg 2010-02-27 21:28:35 UTC
SVN commit 1096851 by mwiesweg:

Fix pasting in icon view

BUG: 228802

 M  +2 -1      NEWS  
 M  +1 -1      libs/widgets/common/dcategorizedview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1096851