Fix pasting in icon view

BUG: 228802

svn path=/trunk/extragear/graphics/digikam/; revision=1096851